--- a/src/frontend/usuarios/vista_admin_usuarios/vista_admin_usuarios.css
+++ b/src/frontend/usuarios/vista_admin_usuarios/vista_admin_usuarios.css
@@ -53,6 +53,21 @@
     background: #2196f3;
 }
 
+.btn-crear-usuario-acudiente {
+    background: #3ea8ff;
+    color: white;
+    border: none;
+    padding: 10px 18px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.btn-crear-usuario-acudiente:hover {
+    background: #2196f3;
+}
+
+
 /* Tabla */
 .tabla-usuarios table {
     width: 100%;
